Updated links to github repo

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,8 +8,8 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" rel="stylesheet">
 
-    <link href="styles.css" rel="stylesheet">
- 
+    <link href="https://cdn.rawgit.com/RayBB/easy-gmail-scheduler/f8ad82a7/src/frontend/styles.css" rel="stylesheet">
+
     <!-- Moment, for date parsing -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"
      integrity="sha256-QTFbCMKzMsKmdagXusjKHMZIwzEJtpnGYJ/v/ArHklQ=" crossorigin="anonymous"></script>
@@ -86,6 +86,6 @@
         </template>
     </div>
 </div>
-<script src="script.js"></script>
+<script src="https://cdn.rawgit.com/RayBB/easy-gmail-scheduler/f8ad82a7/src/frontend/script.js"></script>
 </body>
 </html>
