Fix link to license

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -72,7 +72,7 @@
         </div>
         <footer class="footer text-center">
             <hr>
-            <p><a href="https://github.com/RayBB/easy-gmail-scheduler">Made with love</a> | Code licensed <a href="Code licensed MIT">MIT</a>
+            <p><a href="https://github.com/RayBB/easy-gmail-scheduler">Made with love</a> | Code licensed <a href="https://github.com/RayBB/easy-gmail-scheduler/blob/master/LICENSE">MIT</a>
             </p>
         </footer>
         <template id="productrow">
