--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,14 +5,14 @@
     <title>Easy Gmail Scheduler</title>
     
     <!-- Latest compiled and minified CSS-->
-    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
 
-    <link href="https://cdn.rawgit.com/RayBB/easy-gmail-scheduler/f8ad82a7/src/frontend/styles.css" rel="stylesheet">
+    <link href="https://raybb.github.io/easy-gmail-scheduler/src/frontend/styles.css" rel="stylesheet">
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"
+    integrity="sha256-Mwee5t+bD35zhwF9nGFf7szo0kMlILdBFdSK5xPQaTI=" crossorigin="anonymous"></script>
 
-    <!-- Moment, for date parsing -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"
-     integrity="sha256-QTFbCMKzMsKmdagXusjKHMZIwzEJtpnGYJ/v/ArHklQ=" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="vertical-center">
@@ -86,6 +86,6 @@
         </template>
     </div>
 </div>
-<script src="https://cdn.rawgit.com/RayBB/easy-gmail-scheduler/f8ad82a7/src/frontend/script.js"></script>
+<script src="https://raybb.github.io/easy-gmail-scheduler/src/frontend/script.js"></script>
 </body>
 </html>
