--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -30,6 +30,11 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <input id="refreshButton" class="btn btn-primary pull-right" onclick="displayDrafts()" type="button" value="Refresh">
+            </div>
+        </div>
         <div class="row" id="dateTimeRow">
             <div class="col-sm-6  form-group">
                 <div class="input-group">
