--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -27,12 +27,12 @@
                 <div class="input-group form-group">
                     <span class="input-group-addon" id="basic-addon0">Subject</span>
                     <select aria-labelledby="basic-addon0" type="date" class="form-control" id="subjects"> </select>
+                    <span class="input-group-btn">
+                        <button class="btn btn-secondary" type="button" onclick="displayDrafts()" id="refreshButton">
+                            <span class="glyphicon glyphicon-refresh"></span>
+                        </button>
+                    </span>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <input id="refreshButton" class="btn btn-primary pull-right" onclick="displayDrafts()" type="button" value="Refresh">
             </div>
         </div>
         <div class="row" id="dateTimeRow">
